# XposedImGuiMenu

./: .gitignore  .gitmodules  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  Menu.h  main.cpp
app/src/main/cpp/Game/: GameValues.h  Hooks.h  Patches.h  Pointers.h
app/src/main/cpp/compiled_libs/curl/arm64-v8a/lib/: libcurl.la
app/src/main/cpp/compiled_libs/curl/arm64-v8a/lib/pkgconfig/: libcurl.pc
app/src/main/cpp/compiled_libs/curl/armeabi-v7a/lib/: libcurl.la
app/src/main/cpp/compiled_libs/curl/armeabi-v7a/lib/pkgconfig/: libcurl.pc
app/src/main/cpp/compiled_libs/curl/x86/lib/: libcurl.la
app/src/main/cpp/compiled_libs/curl/x86/lib/pkgconfig/: libcurl.pc
app/src/main/cpp/compiled_libs/curl/x86_64/lib/: libcurl.la
app/src/main/cpp/compiled_libs/curl/x86_64/lib/pkgconfig/: libcurl.pc
app/src/main/cpp/compiled_libs/openssl/arm64-v8a/include/openssl/: configuration.h  core_names.h
app/src/main/cpp/compiled_libs/openssl/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/compiled_libs/openssl/armeabi-v7a/include/openssl/: configuration.h
app/src/main/cpp/compiled_libs/openssl/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/compiled_libs/openssl/x86/include/openssl/: configuration.h
app/src/main/cpp/compiled_libs/openssl/x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/compiled_libs/openssl/x86_64/include/openssl/: configuration.h  x509.h
app/src/main/cpp/compiled_libs/openssl/x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/include/: Il2CppHelper.cpp  Il2CppHelper.h  JNIStuff.h  Misc.h  Tools.cpp  Tools.h  includes.h  input.h  log.h  ptr.h
app/src/main/java/org/modfs/xposedmenu/: Inject.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rules/: init-rule.mdc
